Add mobile and desktop HTML for header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <header class="header">
+            <header class="header__desktop">
                 <div class="header__logo">
                     <div class="logo__container">
                         <img
@@ -17,10 +17,29 @@
                             src="/src/img/ic-logo.svg"
                             alt="logo of Colmar Academy"
                         />
-                        <h1 class="logo__name"><strong>Colmar</strong><span>Academy</span></h1>
+                        <div class="logo__name"><strong>Colmar</strong><span>Academy</span></div>
                     </div>
                 </div>
+                <div class="menu__container">
+                    <ul class="menu">
+                        <li class="menu__item"><a href="#">On Campus</a></li>
+                        <li class="menu__item"><a href="#"></a>Online</li>
+                        <li class="menu__item"><a href="#"></a>For Companies</li>
+                        <li class="menu__item"><a href="#"></a>Sign In</li>
+                    </ul>
+                </div>
             </header>
+            <header class="header__mobile">
+                <div class="icons__wrapper">
+                    <a href="" class="header__mobile__link"><img src="/src/img/ic-logo.svg" alt="" class="header__mobile__icon"></a>
+                    <a href="" class="header__mobile__link"><img src="/src/img/ic-on-campus.svg" alt="" class="header__mobile__icon"></a>
+                    <a href="" class="header__mobile__link"><img src="/src/img/ic-online.svg" alt="" class="header__mobile__icon"></a>
+                    <a href="" class="header__mobile__link"><img src="/src/img/ic-login.svg" alt="" class="header__mobile__icon"></a>
+                </div>
+            </header>
+            <main class="main">
+
+            </main>
         </div>
     </body>
 </html>
