Added banner and post part HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/src/css/style.css">
+        <link rel="stylesheet" href="/src/css/style.css" />
         <title>Colmar Academy</title>
     </head>
     <body>
@@ -17,28 +17,173 @@
                             src="/src/img/ic-logo.svg"
                             alt="logo of Colmar Academy"
                         />
-                        <div class="logo__name"><strong>Colmar</strong><span>Academy</span></div>
+                        <div class="logo__name">
+                            <strong>Colmar</strong><span>Academy</span>
+                        </div>
                     </div>
                 </div>
                 <div class="menu__container">
                     <ul class="menu">
-                        <li class="menu__item"><a href="#">On Campus</a></li>
-                        <li class="menu__item"><a href="#"></a>Online</li>
-                        <li class="menu__item"><a href="#"></a>For Companies</li>
-                        <li class="menu__item"><a href="#"></a>Sign In</li>
+                        <li class="menu__item">
+                            <a href="#">On Campus</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">Online</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">For Companies</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#">Sign In</a>
+                        </li>
                     </ul>
                 </div>
             </header>
             <header class="header__mobile">
                 <div class="icons__wrapper">
-                    <a href="" class="header__mobile__link"><img src="/src/img/ic-logo.svg" alt="" class="header__mobile__icon"></a>
-                    <a href="" class="header__mobile__link"><img src="/src/img/ic-on-campus.svg" alt="" class="header__mobile__icon"></a>
-                    <a href="" class="header__mobile__link"><img src="/src/img/ic-online.svg" alt="" class="header__mobile__icon"></a>
-                    <a href="" class="header__mobile__link"><img src="/src/img/ic-login.svg" alt="" class="header__mobile__icon"></a>
+                    <a href="" class="header__mobile__link"
+                        ><img
+                            src="/src/img/ic-logo.svg"
+                            alt="logo"
+                            class="header__mobile__icon"
+                    /></a>
+                    <a href="" class="header__mobile__link"
+                        ><img
+                            src="/src/img/ic-on-campus.svg"
+                            alt="on-campus"
+                            class="header__mobile__icon"
+                    /></a>
+                    <a href="" class="header__mobile__link"
+                        ><img
+                            src="/src/img/ic-online.svg"
+                            alt="online"
+                            class="header__mobile__icon"
+                    /></a>
+                    <a href="" class="header__mobile__link"
+                        ><img
+                            src="/src/img/ic-login.svg"
+                            alt="login"
+                            class="header__mobile__icon"
+                    /></a>
                 </div>
             </header>
             <main class="main">
-
+                <div class="banner">
+                    <div class="banner__img__container">
+                        <img
+                            class="banner__img"
+                            src="/src/img/banner.jpg"
+                            alt="girl siiting on the desk"
+                        />
+                    </div>
+                    <div class="banner__text">
+                        <h2>Learn something new everyday</h2>
+                        <h4>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Rem modi, asperiores quo aliquid mollitia
+                            voluptatibus, iste fugiat impedit architecto,
+                            deserunt ex repellat atque cum dolores.
+                        </h4>
+                    </div>
+                    <div class="banner__button">
+                        <a href="#" class="button__link">
+                            <button>Start Here!</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="posts">
+                    <div class="posts__container">
+                        <div class="post-big__container">
+                            <div class="post-big__img__container">
+                                <img
+                                    src="/src/img/information-main.jpg"
+                                    alt="nigger sittin`"
+                                    class="post-big__img"
+                                />
+                            </div>
+                            <div class="post-big__text">
+                                <h2>It doesn`t hurt to keep practicing</h2>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit. Officia culpa delectus at.
+                                    Rerum, quisquam, porro deserunt explicabo,
+                                    possimus dolorem enim quaerat nihil
+                                    repellendus consectetur maiores et iusto?
+                                    Maxime, optio explicabo. In mollitia, ea,
+                                    nesciunt tempore fuga repellat sequi aut,
+                                    accusantium tenetur impedit quae. Dicta
+                                    inventore praesentium autem possimus
+                                    doloribus, expedita voluptas maxime quasi
+                                    quaerat soluta? Assumenda maiores amet ullam
+                                    velit!
+                                </p>
+                                <h5>Arsen, some random guy from Drohobych</h5>
+                            </div>
+                        </div>
+                        <div class="post__side__container">
+                            <div class="post-1__container post">
+                                <div class="post__img__container">
+                                    <img
+                                        src="/src/img/information-orientation.jpg"
+                                        alt="some desert"
+                                        class="post__img"
+                                    />
+                                    <img
+                                        src="/src/img/information-orientation-mobile.jpg"
+                                        alt="some desert"
+                                        class="post__img-mobile"
+                                    />
+                                </div>
+                                <div class="post__text__container">
+                                    <h4>Orientation Date</h4>
+                                    <p>Tue 10/11 and Wed 10/12: 8am-2pm</p>
+                                    <a href="#">Read more!</a>
+                                </div>
+                            </div>
+                            <div class="post-2__container post">
+                                <div class="post__img__container">
+                                    <img
+                                        src="/src/img/information-campus.jpg"
+                                        alt="Campus"
+                                        class="post__img"
+                                    />
+                                    <img
+                                        src="/src/img/information-campus-mobile.jpg"
+                                        alt="Campus"
+                                        class="post__img-mobile"
+                                    />
+                                </div>
+                                <div class="post__text__container">
+                                    <h4>Our Campus</h4>
+                                    <p>Find witch campus is close by you</p>
+                                    <a href="#">Read more!</a>
+                                </div>
+                            </div>
+                            <div class="post-1__container post">
+                                <div class="post__img__container">
+                                    <img
+                                        src="/src/img/information-guest-lecture.jpg"
+                                        alt="guest-lecture"
+                                        class="post__img"
+                                    />
+                                    <img
+                                        src="/src/img/information-guest-lecture-mobile.jpg"
+                                        alt="guest-lecture"
+                                        class="post__img-mobile"
+                                    />
+                                </div>
+                                <div class="post__text__container">
+                                    <h4>Our Guest lecture</h4>
+                                    <p>
+                                        Loin a keynote with Oliver Sack abou
+                                        music in medical treatment
+                                    </p>
+                                    <a href="#">Read more!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </body>
