Added Courses part HTML

--- a/index.html
+++ b/index.html
@@ -184,6 +184,77 @@
                         </div>
                     </div>
                 </div>
+                <div class="courses">
+                    <h2>Start Learning!</h2>
+                    <div class="courses__container">
+                        <div class="course__container">
+                            <h4 class="course-mobile">Software Engineering</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-software.jpg" alt="software engeneering" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4>Software Engineering</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>Web development, Mobile development,iOT, APIs</p>
+                            </div>
+                        </div>
+                        <div class="course__container">
+                            <h4 class="course-mobile">Computer art</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-computer-art.jpg" alt="computer-art" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4>Computer art</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>Imaging and Design, Web Design, Motion Graphics and visual effects, Computer Animation</p>
+                            </div>
+                        </div>
+                        <div class="course__container">
+                            <h4 class="course-mobile">Design</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-design.jpg" alt="design" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4>Design</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>User Expirience Design, User Reserch, Visual Design</p>
+                            </div>
+                        </div>
+                        <div class="course__container">
+                            <h4 class="course-mobile">Data</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-data.jpg" alt="data" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4>Data</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>Data Science, Big Data, SQL, Data Visualisation</p>
+                            </div>
+                        </div>
+                        <div class="course__container">
+                            <h4 class="course-mobile">Business</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-business.jpg" alt="business" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4>Business</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>Product Development, Business Development, Startup</p>
+                            </div>
+                        </div>
+                        <div class="course__container">
+                            <h4>Marketing</h4>
+                            <div class="course__img__container">
+                                <img src="/src/img/course-marketing.jpg" alt="marketing" class="course__img">
+                            </div>
+                            <div class="course__text__container">
+                                <h4 class="course-mobile">Marketing</h4>
+                                <p class="p-big">COURSE</p>
+                                <p>Analytics, Content Marketing, Mobile Marketing</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
     </body>
