--- a/index.html
+++ b/index.html
@@ -121,66 +121,72 @@
                             </div>
                         </div>
                         <div class="post__side__container">
-                            <div class="post-1__container post">
-                                <div class="post__img__container">
-                                    <img
-                                        src="/src/img/information-orientation.jpg"
-                                        alt="some desert"
-                                        class="post__img"
-                                    />
-                                    <img
-                                        src="/src/img/information-orientation-mobile.jpg"
-                                        alt="some desert"
-                                        class="post__img-mobile"
-                                    />
+                            <a href="#">
+                                <div class="post-1__container side">
+                                    <div class="post__img__container side__img">
+                                        <img
+                                            src="/src/img/information-orientation.jpg"
+                                            alt="some desert"
+                                            class="post__img"
+                                        />
+                                        <img class="img__mobile"
+                                            src="/src/img/information-orientation-mobile.jpg"
+                                            alt="some desert"
+                                            class="post__img-mobile"
+                                        />
+                                    </div>
+                                    <div class="post__text__container side__text">
+                                        <h4>Orientation Date</h4>
+                                        <p>Tue 10/11 and Wed 10/12: 8am-2pm</p>
+                                        <a href="#">Read more!</a>
+                                    </div>
                                 </div>
-                                <div class="post__text__container">
-                                    <h4>Orientation Date</h4>
-                                    <p>Tue 10/11 and Wed 10/12: 8am-2pm</p>
-                                    <a href="#">Read more!</a>
+                            </a>
+                            <a href="#">
+                                <div class="post-2__container side">
+                                    <div class="post__img__container side__img">
+                                        <img
+                                            src="/src/img/information-campus.jpg"
+                                            alt="Campus"
+                                            class="post__img"
+                                        />
+                                        <img class="img__mobile"
+                                            src="/src/img/information-campus-mobile.jpg"
+                                            alt="Campus"
+                                            class="post__img-mobile"
+                                        />
+                                    </div>
+                                    <div class="post__text__container side__text">
+                                        <h4>Our Campus</h4>
+                                        <p>Find witch campus is close by you</p>
+                                        <a href="#">Read more!</a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="post-2__container post">
-                                <div class="post__img__container">
-                                    <img
-                                        src="/src/img/information-campus.jpg"
-                                        alt="Campus"
-                                        class="post__img"
-                                    />
-                                    <img
-                                        src="/src/img/information-campus-mobile.jpg"
-                                        alt="Campus"
-                                        class="post__img-mobile"
-                                    />
+                            </a>
+                            <a href="#">
+                                <div class="post-3__container side">
+                                    <div class="post__img__container img__side">
+                                        <img
+                                            src="/src/img/information-guest-lecture.jpg"
+                                            alt="guest-lecture"
+                                            class="post__img"
+                                        />
+                                        <img class="img__mobile"
+                                            src="/src/img/information-guest-lecture-mobile.jpg"
+                                            alt="guest-lecture"
+                                            class="post__img-mobile"
+                                        />
+                                    </div>
+                                    <div class="post__text__container text__side">
+                                        <h4>Our Guest lecture</h4>
+                                        <p>
+                                            Loin a keynote with Oliver Sack abou
+                                            music in medical treatment
+                                        </p>
+                                        <a href="#">Read more!</a>
+                                    </div>
                                 </div>
-                                <div class="post__text__container">
-                                    <h4>Our Campus</h4>
-                                    <p>Find witch campus is close by you</p>
-                                    <a href="#">Read more!</a>
-                                </div>
-                            </div>
-                            <div class="post-1__container post">
-                                <div class="post__img__container">
-                                    <img
-                                        src="/src/img/information-guest-lecture.jpg"
-                                        alt="guest-lecture"
-                                        class="post__img"
-                                    />
-                                    <img
-                                        src="/src/img/information-guest-lecture-mobile.jpg"
-                                        alt="guest-lecture"
-                                        class="post__img-mobile"
-                                    />
-                                </div>
-                                <div class="post__text__container">
-                                    <h4>Our Guest lecture</h4>
-                                    <p>
-                                        Loin a keynote with Oliver Sack abou
-                                        music in medical treatment
-                                    </p>
-                                    <a href="#">Read more!</a>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -190,67 +196,145 @@
                         <div class="course__container">
                             <h4 class="course-mobile">Software Engineering</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-software.jpg" alt="software engeneering" class="course__img">
+                                <img
+                                    src="/src/img/course-software.jpg"
+                                    alt="software engeneering"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4>Software Engineering</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>Web development, Mobile development,iOT, APIs</p>
+                                <p>
+                                    Web development, Mobile development,iOT,
+                                    APIs
+                                </p>
                             </div>
                         </div>
                         <div class="course__container">
                             <h4 class="course-mobile">Computer art</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-computer-art.jpg" alt="computer-art" class="course__img">
+                                <img
+                                    src="/src/img/course-computer-art.jpg"
+                                    alt="computer-art"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4>Computer art</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>Imaging and Design, Web Design, Motion Graphics and visual effects, Computer Animation</p>
+                                <p>
+                                    Imaging and Design, Web Design, Motion
+                                    Graphics and visual effects, Computer
+                                    Animation
+                                </p>
                             </div>
                         </div>
                         <div class="course__container">
                             <h4 class="course-mobile">Design</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-design.jpg" alt="design" class="course__img">
+                                <img
+                                    src="/src/img/course-design.jpg"
+                                    alt="design"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4>Design</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>User Expirience Design, User Reserch, Visual Design</p>
+                                <p>
+                                    User Expirience Design, User Reserch, Visual
+                                    Design
+                                </p>
                             </div>
                         </div>
                         <div class="course__container">
                             <h4 class="course-mobile">Data</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-data.jpg" alt="data" class="course__img">
+                                <img
+                                    src="/src/img/course-data.jpg"
+                                    alt="data"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4>Data</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>Data Science, Big Data, SQL, Data Visualisation</p>
+                                <p>
+                                    Data Science, Big Data, SQL, Data
+                                    Visualisation
+                                </p>
                             </div>
                         </div>
                         <div class="course__container">
                             <h4 class="course-mobile">Business</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-business.jpg" alt="business" class="course__img">
+                                <img
+                                    src="/src/img/course-business.jpg"
+                                    alt="business"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4>Business</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>Product Development, Business Development, Startup</p>
+                                <p>
+                                    Product Development, Business Development,
+                                    Startup
+                                </p>
                             </div>
                         </div>
                         <div class="course__container">
                             <h4>Marketing</h4>
                             <div class="course__img__container">
-                                <img src="/src/img/course-marketing.jpg" alt="marketing" class="course__img">
+                                <img
+                                    src="/src/img/course-marketing.jpg"
+                                    alt="marketing"
+                                    class="course__img"
+                                />
                             </div>
                             <div class="course__text__container">
                                 <h4 class="course-mobile">Marketing</h4>
                                 <p class="p-big">COURSE</p>
-                                <p>Analytics, Content Marketing, Mobile Marketing</p>
+                                <p>
+                                    Analytics, Content Marketing, Mobile
+                                    Marketing
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thesis">
+                    <div class="thesis__container">
+                        <div class="thesis__container__main">
+                            <video src="/src/img/thesis.mp4">Random Shit</video>
+                            <h4>Reimagine Urban</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Explicabo, distinctio? Velit
+                                quam illo autem veniam libero itaque! Nobis
+                                ducimus nihil, quos sit deserunt, quam eligendi
+                                beatae sequi corrupti excepturi quae!
+                            </p>
+                        </div>
+                        <div class="thesis__container__side">
+                            <div class="thesis__side1 side">
+                                <div class="thesis__img__container side__img">
+                                    <img src="/src/img/thesis-fisma.jpg" alt="fisma" class="thesis__img">
+                                </div>
+                                <div class="thesis__text__container side__text">
+                                    <h4>Figma: Design and Prototype</h4>
+                                    <p>Designer showcase of prototype product</p>
+                                </div>
+                            </div>
+                            <div class="thesis__side2 side">
+                                <div class="thesis__img__container side__img">
+                                    <img src="/src/img/thesis-now-and-then.jpg" alt="now and then" class="thesis__img">
+                                </div>
+                                <div class="thesis__text__container side__text">
+                                    <h4>Now and Then</h4>
+                                    <p>Research study about New York</p>
+                                </div>
                             </div>
                         </div>
                     </div>
