bad version of posts section

--- a/index.html
+++ b/index.html
@@ -29,20 +29,12 @@
                     </div>
                 </div>
                 <div class="menu__container">
-                    <ul class="menu">
-                        <li class="menu__item">
-                            <a href="#">On Campus</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#">Online</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#">For Companies</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#">Sign In</a>
-                        </li>
-                    </ul>
+                    <nav class="menu">
+                        <a class="notblack" href="#">On Campus</a>
+                        <a class="notblack" href="#">Online</a>
+                        <a class="notblack" href="#">For Companies</a>
+                        <a class="black" href="#">Sign In</a>
+                    </nav>
                 </div>
             </header>
             <header class="header__mobile">
@@ -76,22 +68,20 @@
             <main class="main">
                 <div class="banner">
                     <div class="banner__container">
-                        <div class="banner__img__container">
-                            <img
-                                class="banner__img"
-                                src="/src/img/banner.jpg"
-                                alt="girl siiting on the desk"
-                            />
-                        </div>
+                        <img
+                            class="banner__img"
+                            src="/src/img/banner.jpg"
+                            alt="girl siiting on the desk"
+                        />
                         <div class="banner__text">
                             <h2>Learn something new everyday</h2>
                             <h4>
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit.
                             </h4>
-                            <a href="#" class="button__link">
-                                <button>Start Here!</button>
-                            </a>
+                            <button>
+                                <a href="#" class="button__link">Start Here!</a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -132,14 +122,13 @@
                                         class="post__img-mobile"
                                     />
                                 </div>
-
                                 <img
                                     class="side__img"
                                     src="/src/img/information-orientation.jpg"
                                     alt="some desert"
                                     class="post__img"
                                 />
-                                <div class="post__text__container side__text">
+                                <div class="side__text">
                                     <h4>Orientation Date</h4>
                                     <p>Tue 10/11 and Wed 10/12: 8am-2pm</p>
                                     <a href="#">Read more!</a>
