Added thesis section and footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <!-- Posts Section -->
 
-                <div class="posts">
+                <div class="posts container">
                     <div class="main__post">
                         <img
                             class="main-img"
@@ -115,7 +115,7 @@
                                 quasi quaerat soluta? Assumenda maiores amet
                                 ullam velit!
                             </p>
-                                <h5>Arsen, some random guy from Drohobych</h5>
+                            <h5>Arsen, some random guy from Drohobych</h5>
                         </div>
                     </div>
                     <div class="side__posts">
@@ -302,11 +302,11 @@
                 </div>
 
                 <!-- Thesis Section -->
-
                 <div class="thesis">
+                    <h2>Thesis exhibit</h2>
                     <div class="thesis__container container">
-                        <div class="thesis__container__main main__container">
-                            <video src="/src/img/thesis.mp4">Random Shit</video>
+                        <div class="main__post">
+                            <video src="/src/img/thesis.mp4" controls>Random Shit</video>
                             <h4>Reimagine Urban</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur
@@ -316,31 +316,29 @@
                                 beatae sequi corrupti excepturi quae!
                             </p>
                         </div>
-                        <div class="thesis__container__side side__container">
-                            <div class="thesis__side1 side">
-                                <div class="thesis__img__container side__img">
-                                    <img
-                                        src="/src/img/thesis-fisma.jpg"
-                                        alt="fisma"
-                                        class="thesis__img"
-                                    />
-                                </div>
-                                <div class="thesis__text__container side__text">
+                        <div class="side__posts">
+                            <div class="thesis__side1 side__post">
+                                <img
+                                    class="post__img"
+                                    src="/src/img/thesis-fisma.jpg"
+                                    alt="fisma"
+                                    class="thesis__img"
+                                />
+                                <div class="thesis__text__container post__text">
                                     <h4>Figma: Design and Prototype</h4>
                                     <p>
                                         Designer showcase of prototype product
                                     </p>
                                 </div>
                             </div>
-                            <div class="thesis__side2 side">
-                                <div class="thesis__img__container side__img">
-                                    <img
-                                        src="/src/img/thesis-now-and-then.jpg"
-                                        alt="now and then"
-                                        class="thesis__img"
-                                    />
-                                </div>
-                                <div class="thesis__text__container side__text">
+                            <div class="thesis__side2 side__post">
+                                <img
+                                    class="post__img"
+                                    src="/src/img/thesis-now-and-then.jpg"
+                                    alt="now and then"
+                                    class="thesis__img"
+                                />
+                                <div class="thesis__text__container post__text">
                                     <h4>Now and Then</h4>
                                     <p>Research study about New York</p>
                                 </div>
@@ -353,19 +351,17 @@
             <!-- Footer -->
 
             <footer class="footer">
-                <div class="footer__container">
-                    <div class="rights">
-                        <span>2016 Colmar Academy. All Rights Reserved</span>
-                    </div>
-                    <ul>
-                        <a href="#">
-                            <li>Therms</li>
-                        </a>
-                        <a href="#">
-                            <li>Privacy</li>
-                        </a>
-                    </ul>
+                <div class="rights">
+                    <span>2016 Colmar Academy. All Rights Reserved</span>
                 </div>
+                <ul>
+                    <a href="#">
+                        <li>Therms</li>
+                    </a>
+                    <a href="#">
+                        <li>Privacy</li>
+                    </a>
+                </ul>
             </footer>
         </div>
     </body>
