Add thesis and footer adaptive design

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- Posts Section -->
 
                 <div class="posts container">
-                    <div class="main__post">
+                    <div class="main__post main-post">
                         <img
                             class="main-img"
                             src="/src/img/information-main.jpg"
@@ -285,7 +285,7 @@
                                     class="course__img"
                                 />
                             </div>
-                            <div class="course__text__container">
+                            <div class="course__text__container ">
                                 <h4>Marketing</h4>
                                 <p class="p-big"><i>COURSE</i></p>
                                 <p>
@@ -301,7 +301,7 @@
                 <div class="thesis">
                     <h2>Thesis exhibit</h2>
                     <div class="thesis__container container">
-                        <div class="main__post">
+                        <div class="main__post thesis__post">
                             <video src="/src/img/thesis.mp4" controls>Random Shit</video>
                             <h4>Reimagine Urban</h4>
                             <p>
@@ -312,7 +312,7 @@
                                 beatae sequi corrupti excepturi quae!
                             </p>
                         </div>
-                        <div class="side__posts">
+                        <div class="side__posts thesis__side">
                             <div class="thesis__side1 side__post">
                                 <img
                                     class="post__img"
